@@ -25,7 +25,7 @@
   <?php print $topic_header ?>
 <?php endif; ?>
 
-<div id="node-<?php print $node->nid; ?>" class="<?php print $classes; ?>" <?php print $attributes; ?>>
+<div id="<?php print $post_id; ?>" class="<?php print $classes; ?>" <?php print $attributes; ?>>
   <div class="forum-post-info clearfix">
     <div class="forum-posted-on">
       <?php print $date ?>
